# streamlit-tmp

./: README.md  pyproject.toml  pyproject.toml.bak  requirements.txt
defineAI/: main.py  rag_functionality.py
defineAI/core/: chunk.py  embedding.py  parse.py  qa.py
defineAI/utils/: i.py  ui.py  utils.py
